<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="micromaster.beginner.com.tipcalculator.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_billAmount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp">

        <EditText
            android:id="@+id/input_billAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_hint"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_tip_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignEnd="@+id/input_layout_billAmount"
        android:layout_alignRight="@+id/input_layout_billAmount"
        android:text="@string/tip_20" />

    <Button
        android:id="@+id/button_tip_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_layout_billAmount"
        android:layout_alignStart="@+id/input_layout_billAmount"
        android:layout_below="@+id/input_layout_billAmount"
        android:layout_marginTop="33dp"
        android:text="@string/tip_15" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_tip_15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/total_amount"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/viewTotalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalAmount"
        android:text="View Total" />
</RelativeLayout>
