<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="total_amount">Total Amount:</string>
    <string name="tip_15">15% Tip</string>
    <string name="tip_20">20% Tip</string>
    <string name="tip_hint">Bill Amount</string>
    <string name="view_total">View Total:</string>
</resources>
