<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="total_amount">Total Amount:</string>
    <string name="tip_15">15% Tip</string>
    <string name="tip_20">20% Tip</string>
    <string name="tip_30">30% Tip</string>
    <string name="tip_40">40% Tip</string>
    <string name="tip_hint">Bill Amount</string>
</resources>
